--- a/style.css
+++ b/style.css
@@ -147,6 +147,7 @@ header .fa-bars {
     display: none;
 }
 
+/*******Home CSS **********/
 .home .content h1 {
     font-size: 5rem;
     color: var(--black);
@@ -159,4 +160,30 @@ header .fa-bars {
 .home .content h3 {
     font-size: 4rem;
     color: var(--black);
+}
+
+/**********About CSS******/
+
+.about {
+    background: #eee;
+}
+
+.about .content .box {
+    margin: 3rem 0;
+}
+
+.about .content .box h3 {
+    font-size: 2.5rem;
+    color: var(--black);
+}
+
+.about .content .box h3 i {
+    padding: 0 1rem;
+    color: var(--blue);
+}
+
+.about .content .box p {
+    font-size: 1.7rem;
+    padding-left: 6rem;
+    color: #666;
 }
