--- a/style.css
+++ b/style.css
@@ -187,3 +187,33 @@ header .fa-bars {
     padding-left: 6rem;
     color: #666;
 }
+
+/******Facility CSS******/
+
+.facility {
+    min-height: 100vh;
+}
+
+.facility .box-container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding-bottom: 3rem;
+}
+
+.facility .box-container .box {
+    height: 20rem;
+    width: 30rem;
+    margin: .3rem;
+    overflow: hidden;
+}
+
+.facility .box-container .box img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.facility .box-container .box:hover img {
+    transform: scale(1.3);
+}
