--- a/style.css
+++ b/style.css
@@ -194,6 +194,7 @@ header .fa-bars {
     min-height: 100vh;
 }
 
+
 .facility .box-container {
     display: flex;
     justify-content: center;
@@ -209,8 +210,8 @@ header .fa-bars {
 }
 
 .facility .box-container .box img {
-    height: 100%;
-    width: 100%;
+    height: 170px;
+    width: 250px;
     object-fit: cover;
 }
 
