--- a/style.css
+++ b/style.css
@@ -91,8 +91,9 @@ header {
     position: fixed;
     top: 0;
     left: 0;
-    padding: 2rem 1rem;
+    padding: 0.4rem 0.4rem;
     z-index: 1000;
+    background-color: #6495ED;
 }
 
 .header-active {
@@ -107,12 +108,14 @@ header .container {
     justify-content: space-between;
 }
 
+
+
 header a {
     color: var(--black);
 }
 
 header a:hover {
-    color: var(--CornflowerBlue);
+    color: white;
 }
 
 header .container .logo {
@@ -179,7 +182,7 @@ header .fa-bars {
 
 .about .content .box h3 i {
     padding: 0 1rem;
-    color: var(--blue);
+    color: var(--CornflowerBlue);
 }
 
 .about .content .box p {
@@ -188,33 +191,95 @@ header .fa-bars {
     color: #666;
 }
 
-/******Facility CSS******/
+/******concern CSS******/
 
-.facility {
+.concern {
     min-height: 100vh;
 }
 
 
-.facility .box-container {
+.concern .box-container {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     padding-bottom: 3rem;
 }
 
-.facility .box-container .box {
+.concern .box-container .box {
     height: 20rem;
     width: 30rem;
     margin: .3rem;
     overflow: hidden;
 }
 
-.facility .box-container .box img {
+.concern .box-container .box img {
     height: 170px;
     width: 250px;
     object-fit: cover;
 }
 
-.facility .box-container .box:hover img {
+.concern .box-container .box:hover img {
     transform: scale(1.3);
+}
+
+/*****expert css******/
+.expert {
+    background-color: #6495ED;
+}
+
+.expert .heading {
+    color: #fff;
+}
+
+.expert .box-container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding-bottom: 5rem;
+}
+
+.expert .box-container .box {
+    background: #fff;
+    width: 30rem;
+    margin: 5rem 1rem;
+    padding: 1.5rem;
+    position: relative;
+}
+
+.expert .box-container .box img {
+    position: absolute;
+    bottom: -7.5rem;
+    left: -1rem;
+    height: 5rem;
+    width: 5rem;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.expert .box-container .box p {
+    font-size: 1.4rem;
+    color: var(--black);
+}
+
+.expert .box-container .box h3 {
+    text-align: end;
+    color: var(--CornflowerBlue);
+}
+
+.expert .box-container .box span {
+    text-align: end;
+    color: var(--black);
+    display: block;
+    font-size: 1.5rem;
+}
+
+.expert .box-container .box::before {
+    content: '';
+    position: absolute;
+    bottom: -1rem;
+    left: .4rem;
+    height: 2rem;
+    width: 2rem;
+    background: #fff;
+    transform: rotate(45deg);
 }
