--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ header {
     position: fixed;
     top: 0;
     left: 0;
-    padding: 0.4rem 0.4rem;
+    padding: 0.05rem 0.05rem;
     z-index: 1000;
     background-color: #6495ED;
 }
@@ -165,27 +165,27 @@ header .fa-bars {
     color: var(--black);
 }
 
-/**********About CSS******/
+/**********help CSS******/
 
-.about {
-    background: #eee;
+.help {
+    background: white;
 }
 
-.about .content .box {
+.help .content .box {
     margin: 3rem 0;
 }
 
-.about .content .box h3 {
+.help .content .box h3 {
     font-size: 2.5rem;
     color: var(--black);
 }
 
-.about .content .box h3 i {
+.help .content .box h3 i {
     padding: 0 1rem;
     color: var(--CornflowerBlue);
 }
 
-.about .content .box p {
+.help .content .box p {
     font-size: 1.7rem;
     padding-left: 6rem;
     color: #666;
@@ -282,4 +282,38 @@ header .fa-bars {
     width: 2rem;
     background: #fff;
     transform: rotate(45deg);
+}
+
+/****Facility CSS**/
+.facility .box-container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 2rem 0;
+}
+
+.facility .box-container .box {
+    margin: 2rem 5rem;
+    text-align: center;
+}
+
+.facility .box-container .box i {
+    color: var(--blue);
+    font-size: 5rem;
+}
+
+.facility .box-container .box span {
+    color: var(--black);
+    font-size: 3rem;
+    display: block;
+    padding: 1rem 0;
+}
+
+.facility .box-container .box h3 {
+    color: #666;
+}
+
+.facility .box-container i:hover {
+    color: darkblue;
+    cursor: pointer;
 }
