--- a/style.css
+++ b/style.css
@@ -317,3 +317,47 @@ header .fa-bars {
     color: darkblue;
     cursor: pointer;
 }
+
+.appointment {
+    background: #dcdcdc;
+}
+
+.appointment .heading {
+    color: #fff;
+}
+
+.appointment form {
+    text-align: center;
+}
+
+.appointment form .inputBox {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.appointment form .inputBox input,
+select {
+    height: 4rem;
+    width: 49%;
+    padding: 0 1rem;
+    margin: 1rem 0;
+    font-size: 1.7rem;
+    color: var(--black);
+}
+
+.appointment form textarea {
+    height: 20rem;
+    resize: none;
+    padding: 1rem;
+    font-size: 1.5rem;
+    width: 100%;
+}
+
+.appointment form input[type="submit"] {
+    width: 20rem;
+}
+
+.appointment form input[type="submit"]:hover {
+    background: var(--black);
+}
